JS. Histogram module now is work. Analitics page ready.

--- a/src/pages/analitics.html
+++ b/src/pages/analitics.html
@@ -55,7 +55,7 @@
         <div class="graph__block">
 
           <div class="histogram">
-            <p class="histogram__head-date">дата (сентябрь)</p>
+            <p class="histogram__head-date">дата ( ... )</p>
             <p class="histogram__head-quantity">количество упоминаний</p>
 
             <div class="histogram__scale">
@@ -66,329 +66,7 @@
               <p class="histogram__mark">100</p>
             </div>
 
-
-            <div class="histogram__days-block">
-
-              <div class="histogram__day">
-                <span class="histogram__date">31, ср</span>
-                <p class="histogram__quantity">25</p>
-                <div class="histogram__line">
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                </div>
-              </div>
-
-              <div class="histogram__day">
-                <span class="histogram__date">32, чт</span>
-                <p class="histogram__quantity">10</p>
-                <div class="histogram__line">
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                </div>
-              </div>
-
-              <div class="histogram__day">
-                <span class="histogram__date">33, чт</span>
-                <p class="histogram__quantity">50</p>
-                <div class="histogram__line">
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                </div>
-              </div>
-
-              <div class="histogram__day">
-                <span class="histogram__date">34, чт</span>
-                <p class="histogram__quantity">100</p>
-                <div class="histogram__line">
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                </div>
-              </div>
-
-              <div class="histogram__day">
-                <span class="histogram__date">31, ср</span>
-                <p class="histogram__quantity">25</p>
-                <div class="histogram__line">
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                </div>
-              </div>
-
-              <div class="histogram__day">
-                <span class="histogram__date">32, чт</span>
-                <p class="histogram__quantity">10</p>
-                <div class="histogram__line">
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                </div>
-              </div>
-
-              <div class="histogram__day">
-                <span class="histogram__date">33, чт</span>
-                <p class="histogram__quantity">50</p>
-                <div class="histogram__line">
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                  <div class="histogram__line-item"></div>
-                </div>
-              </div>
-
-            </div>
+            <div class="histogram__days-block"></div>
 
             <div class="histogram__scale">
               <p class="histogram__mark">0</p>
@@ -397,6 +75,7 @@
               <p class="histogram__mark">75</p>
               <p class="histogram__mark">100</p>
             </div>
+
           </div>
         </div>
       </section>
