--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -51,13 +51,13 @@
     </section>
 
     <main class="content">
-      <section class="results results_disable">
-        <h3 class="results__title">Результаты поиска</h3>
-        <a class="results__link link" href="analitics.html">Посмотреть&nbsp;аналитику
+      <section class="news news_disable">
+        <h3 class="news__title">Результаты поиска</h3>
+        <a class="news__link link" href="analitics.html">Посмотреть&nbsp;аналитику
           <img src="<%=require('../images/arrow.svg')%>" alt="open github" class="link__arrow">
         </a>
-        <ul class="cards-list"></ul>
-        <button class="results__button button">Показать&nbsp;больше</button>
+        <ul class="news__cards-list"></ul>
+        <button class="news__button button">Показать&nbsp;больше</button>
       </section>
       <section class="author">
         <picture class="author__pic">
