--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
-  <link rel="stylesheet" href="styles/index.1342547f837ca56d0b5b.css">
+  <link rel="stylesheet" href="styles/index.8058f22d58ef8f93be98.css">
   <title>NewsAnalizer</title>
 </head>
 
@@ -51,13 +51,13 @@
     </section>
 
     <main class="content">
-      <section class="results results_disable">
-        <h3 class="results__title">Результаты поиска</h3>
-        <a class="results__link link" href="analitics.html">Посмотреть&nbsp;аналитику
+      <section class="news news_disable">
+        <h3 class="news__title">Результаты поиска</h3>
+        <a class="news__link link" href="analitics.html">Посмотреть&nbsp;аналитику
           <img src="images/arrow.svg" alt="open github" class="link__arrow">
         </a>
-        <ul class="cards-list"></ul>
-        <button class="results__button button">Показать&nbsp;больше</button>
+        <ul class="news__cards-list"></ul>
+        <button class="news__button button">Показать&nbsp;больше</button>
       </section>
       <section class="author">
         <picture class="author__pic">
@@ -108,7 +108,7 @@
 
   </div>
 
-  <script src="scripts/index.1342547f837ca56d0b5b.js"></script>
+  <script src="scripts/index.8058f22d58ef8f93be98.js"></script>
 
 </body>
 
