JS. First use Flickity. Have some problems.

--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -96,7 +96,7 @@
         <a class="github__link link" href="https://github.com/someDew/newsanalyzer">Открыть&nbsp;на&nbsp;GitHub
           <img src="<%=require('../images/arrow.svg')%>" alt="link to open github" class="link__arrow"></a>
           <button class="github__button button">Открыть&nbsp;на&nbsp;GitHub</button>
-        <ul class="github__cards-list"></ul>
+        <ul class="github__cards-list carousel"></ul>
         <div class="github__indicator">
           <div class="indicator"></div>
           <div class="indicator indicator_select"></div>
