--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Andrew Bubnov">
   <title>About</title>
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
-  <link rel="stylesheet" href="styles/about.72a6c0a0c06ff8e09bd7.css">
+  <link rel="stylesheet" href="styles/about.75dfc4734289fb877c76.css">
 </head>
 
 <body>
@@ -35,17 +35,14 @@
         <p class="forclients__text">Этот сайт — дипломный проект студента Яндкс.Практикума. Его цель — показать, чему
           научился студент, и какими технологиями владеет.<br><br>Вёртска сайта выполнена по методологии БЭМ. Это делает
           сайт гибким и масштабируемым. Кроме того, добавлять новые страницы и функциальность проще и быстрее, чем в
-          проектах, выполненных по другим методологиям. Также
-          сайт проще и дешевле поддерживать.<br><br>Карточки с новостям приходят с сервера и обрабатываются асихронно.
-          То
-          есть сайт продолжает работать, пока от сервера приходит ответ. Это повышает удобство использования
-          сервиса.<br><br>При создании проекта была использона
+          проектах, выполненных по другим методологиям. Также сайт проще и дешевле поддерживать.<br><br>Карточки с
+          новостям приходят с сервера и обрабатываются асихронно. То есть сайт продолжает работать, пока от сервера 
+          приходит ответ. Это повышает удобство использования сервиса.<br><br>При создании проекта была использона
           сборка технологией Webpack. Это современных подход к разработке сайтов. Код оптимизируется, а значит, сайт
-          работает быстрее. Также настроена сайт работает в старых браузерах. Даже
-          если посетители — пользователи старых операционных систем у них не будет проблем с отображением. А значит
-          потенциальная аудитория возрастает.<br><br>Проект был проверен экспертами Яндекс.Практикума. И если вашему
-          бизесу
-          нужен сайт, мы рекомендуем обратиться к этому студенту.</p>
+          работает быстрее. Также настроена сайт работает в старых браузерах. Даже если посетители — пользователи старых
+          операционных систем у них не будет проблем с отображением. А значит потенциальная аудитория возрастает.<br><br>
+          Проект был проверен экспертами Яндекс.Практикума. И если вашему бизесу нужен сайт, мы рекомендуем обратиться
+          к этому студенту.</p>
       </section>
 
       <section class="tech">
@@ -95,12 +92,16 @@
         <h2 class="github__title">История коммитов из&nbsp;GitHub</h2>
         <a class="github__link link" href="https://github.com/someDew/newsanalyzer">Открыть&nbsp;на&nbsp;GitHub
           <img src="images/arrow.svg" alt="link to open github" class="link__arrow"></a>
-          <button class="github__button button">Открыть&nbsp;на&nbsp;GitHub</button>
-        <ul class="github__cards-list"></ul>
-        <div class="github__indicator">
-          <div class="indicator"></div>
-          <div class="indicator indicator_select"></div>
-          <div class="indicator"></div>
+          <button class="github__git-open button">Открыть&nbsp;на&nbsp;GitHub</button>
+        <div class="github__cards-list swiper-container">
+          <ul class="swiper-wrapper"></ul>
+          <div class="github__pagination swiper-pagination"></div>
+          <div class="github__slider-button github__slider-button_prev">
+            <img src="images/arrow.svg" alt="previous slide button" class="github__slider-button-arrow github__slider-button-arrow_prev">
+          </div>
+          <div class="github__slider-button github__slider-button_next">
+            <img src="images/arrow.svg" alt="next slide button" class="github__slider-button-arrow github__slider-button-arrow_next">
+          </div>
         </div>
       </section>
     </main>
@@ -133,7 +134,7 @@
     </footer>
 
   </div>
-  <script src="scripts/about.72a6c0a0c06ff8e09bd7.js"></script>
+  <script src="scripts/about.75dfc4734289fb877c76.js"></script>
 </body>
 
 </html>
