--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
         <h2 class="github__title">История коммитов из&nbsp;GitHub</h2>
         <a class="github__link link" href="https://github.com/someDew/newsanalyzer">Открыть&nbsp;на&nbsp;GitHub
           <img src="images/arrow.svg" alt="link to open github" class="link__arrow"></a>
-          <button class="github__git-open button">Открыть&nbsp;на&nbsp;GitHub</button>
+        <button class="github__git-open button">Открыть&nbsp;на&nbsp;GitHub</button>
         <div class="github__cards-list swiper-container">
           <ul class="swiper-wrapper"></ul>
           <div class="github__pagination swiper-pagination"></div>
@@ -102,6 +102,8 @@
           <div class="github__slider-button github__slider-button_next">
             <img src="images/arrow.svg" alt="next slide button" class="github__slider-button-arrow github__slider-button-arrow_next">
           </div>
+          <div class="github__gradient github__gradient_left"></div>
+          <div class="github__gradient github__gradient_right"></div>
         </div>
       </section>
     </main>
