--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
           работает быстрее. Также настроена сайт работает в старых браузерах. Даже если посетители — пользователи старых
           операционных систем у них не будет проблем с отображением. А значит потенциальная аудитория возрастает.<br><br>
           Проект был проверен экспертами Яндекс.Практикума. И если вашему бизесу нужен сайт, мы рекомендуем обратиться
-          к этому студенту.</p>
+          к этому выпускнику.</p>
       </section>
 
       <section class="tech">
