--- a/index.html
+++ b/index.html
@@ -26,10 +26,14 @@
       <nav class="nav header__nav">
         <ul>
           <li class="nav__item nav__item_select">
-            <a class="link" href="./index.html"><div><span>Главная</span></div></a>
+            <a class="link" href="./index.html">
+              <div><span>Главная</span></div>
+            </a>
           </li>
           <li class="nav__item">
-            <a class="link" href="./about.html"><div><span>О&nbsp;проекте</span></div></a>
+            <a class="link" href="./about.html">
+              <div><span>О&nbsp;проекте</span></div>
+            </a>
           </li>
         </ul>
       </nav>
@@ -42,7 +46,8 @@
           за прошедшую неделю.</h3>
         <form class="form search__form" action="submit" name="searchForm">
           <div class="search__input">
-            <input type="text" class="input" name="searchInput" required="yes" minlength="2" placeholder="введите тему запроса">
+            <input type="text" class="input" name="searchInput" required="yes" minlength="2"
+              placeholder="введите тему запроса">
           </div>
           <button class="button search__button" name="searchSubmit">Искать</button>
           <span class="error search__error"></span>
@@ -67,34 +72,48 @@
           <img src="images/author_512px.jpg" alt="site autors photo">
         </picture>
         <h3 class="author__title">Об&nbsp;авторе</h3>
-        <p class="author__text">Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы
-          занимаетесь, какими технологиями разработки владете.
+        <p class="author__text"> Привет, меня зовут Андрей и этот сайт - мой первый полностью самостоятельный web
+          проект.
           <br><br>
-          Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
-          потенциальным заказчикам.
+          Когда-то давно, когда школьные годы подходили к концу и нужно было определяться с будущей
+          профессией, я колебался между новой, тогда еще мало кому понятной, профессией программиста и другими - более
+          традиционными. Тогда, по многим причинам, выбор был сделан не в пользу программирования.
           <br><br>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit dicta libero labore. Beatae excepturi
-          commodi harum vitae distinctio qui, ipsum officia facilis deleniti illum architecto assumenda ducimus blanditiis id
-          explicabo?</p>
+          Так сложилось, что я всегда интересовался технологиями и среди друзей и знакомых имел репутацию "чувака, который шарит".
+          Да и профессиональная деятельность моя часто была связана с программированием (в определенной степени). Увлекаясь 
+          электроникой, в 2015 году я собрал и написал программу на 20 строк для небольшого устройства на базе контроллера Arduino. 
+          Результат приводил меня в восторг...          
+          <br><br>
+          Именно такой восторг я испытываю теперь, написав с нуля этот поисковик новостей. Теперь я ищу интересные проекты, где 
+          буду полезен и смогу все глубже погружаться в тему frontend и backend разработки. Если Вашей команде нужен увлеченный 
+          фронтэндер, ищите меня в <a class="link" href="https://t.me/dewandrew">telegram</a>.
+        </p>
       </section>
     </main>
 
     <footer class="footer">
       <div class="footer__copyright copyright">
         <span class="copyright__author">©&nbsp;2019&nbsp;Andrew&nbsp;B.<br>
-          <a class="copyright__powered link" href='https://newsapi.org/' target='_blank'>powered&nbsp;by&nbsp;NewsApi.org</a>
-        </span>        
+          <a class="copyright__powered link" href='https://newsapi.org/'
+            target='_blank'>powered&nbsp;by&nbsp;NewsApi.org</a>
+        </span>
       </div>
       <nav class="nav footer__nav">
         <ul>
           <li class="nav__item">
-            <a class="link" href="index.html"><div><span>Главная</span></div></a>
+            <a class="link" href="index.html">
+              <div><span>Главная</span></div>
+            </a>
           </li>
           <li class="nav__item">
-            <a class="link" href="about.html"><div><span>О&nbsp;проекте</span></div></a>
+            <a class="link" href="about.html">
+              <div><span>О&nbsp;проекте</span></div>
+            </a>
           </li>
           <li class="nav__item">
-            <a class="link" href="https://praktikum.yandex.ru/"><div><span>Яндекс.Практикум</span></div></a>
+            <a class="link" href="https://praktikum.yandex.ru/">
+              <div><span>Яндекс.Практикум</span></div>
+            </a>
           </li>
         </ul>
       </nav>
