--- a/about.html
+++ b/about.html
@@ -77,15 +77,21 @@
         </picture>
 
         <h2 class="author__title">Об&nbsp;авторе</h2>
-        <p class="author__text">Это блок с описаением автора проекта. Здесь следует указать, как вас зовут, чем вы
-          занимаетесь, какими технологиями разработки владете.
+        <p class="author__text">Привет, меня зовут Андрей и этот сайт - мой первый полностью самостоятельный web
+          проект.
           <br><br>
-          Также можно рассказать о процессе обучения в Практикуме, чему вы тут научились, и чем можете помочь
-          потенциальным заказчикам.
+          Когда-то давно, когда школьные годы подходили к концу и нужно было определяться с будущей
+          профессией, я колебался между новой, тогда еще мало кому понятной, профессией программиста и другими - более
+          традиционными. Тогда, по многим причинам, выбор был сделан не в пользу программирования.
           <br><br>
-          Lorem ipsum dolor sit amet consectetur, adipisicing elit. Fugit dicta libero labore. Beatae excepturi commodi
-          harum vitae distinctio qui, ipsum officia facilis deleniti illum architecto assumenda ducimus blanditiis id
-          explicabo?</p>
+          Так сложилось, что я всегда интересовался технологиями и среди друзей и знакомых имел репутацию "чувака, который шарит".
+          Да и профессиональная деятельность моя часто была связана с программированием (в определенной степени). Увлекаясь 
+          электроникой, в 2015 году я собрал и написал программу на 20 строк для небольшого устройства на базе контроллера Arduino. 
+          Результат приводил меня в восторг...          
+          <br><br>
+          Именно такой восторг я испытываю теперь, написав с нуля этот поисковик новостей. Теперь я ищу интересные проекты, где 
+          буду полезен и смогу все глубже погружаться в тему frontend и backend разработки. Если Вашей команде нужен увлеченный 
+          фронтэндер, ищите меня в <a class="link" href="https://t.me/dewandrew">telegram</a>.</p>
       </section>
 
       <section class="github">
