--- a/about.html
+++ b/about.html
@@ -91,7 +91,8 @@
           <br><br>
           Именно такой восторг я испытываю теперь, написав с нуля этот поисковик новостей. Теперь я ищу интересные проекты, где 
           буду полезен и смогу все глубже погружаться в тему frontend и backend разработки. Если Вашей команде нужен увлеченный 
-          фронтэндер, ищите меня в <a class="link" href="https://t.me/dewandrew">telegram</a>.</p>
+          фронтэндер, ищите меня в <strong><a class="link" href="https://t.me/dewandrew">telegram</a></strong>.
+        </p>
       </section>
 
       <section class="github">
