--- a/about.html
+++ b/about.html
@@ -96,7 +96,8 @@
       </section>
 
       <section class="github">
-        <h2 class="github__title">История коммитов из&nbsp;GitHub</h2>
+        <!-- <h2 class="github__title">История коммитов из&nbsp;GitHub</h2> -->
+        <h2 class="github__title">hyphens: auto</h2>
         <a class="github__link link" href="https://github.com/someDew/newsanalyzer">Открыть&nbsp;на&nbsp;GitHub
           <img src="images/arrow.svg" alt="link to open github" class="link__arrow"></a>
         <button class="github__git-open button">Открыть&nbsp;на&nbsp;GitHub</button>
