--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -91,7 +91,7 @@
           <br><br>
           Именно такой восторг я испытываю теперь, написав с нуля этот поисковик новостей. Теперь я ищу интересные проекты, где 
           буду полезен и смогу все глубже погружаться в тему frontend и backend разработки. Если Вашей команде нужен увлеченный 
-          фронтэндер, ищите меня в <strong><a class="link" href="https://t.me/dewandrew">telegram</a></strong>.
+          фронтэндер, ищите меня в <strong><a class="link" href="https://t.me/frontandrew">telegram</a></strong>.
         </p>
       </section>
 
