--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <meta name="description" content="newsfeed on demand">
   <meta name="author" content="Andrew Bubnov">
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
-  <link rel="stylesheet" href="styles/index.10794240ffbf384001c5.css">
+  <link rel="stylesheet" href="styles/index.cddd7e8b6bc1e2209737.css">
   <title>NewsAnalizer</title>
 </head>
 
@@ -86,7 +86,7 @@
           <br><br>
           Именно такой восторг я испытываю теперь, написав с нуля этот поисковик новостей. Теперь я ищу интересные проекты, где 
           буду полезен и смогу все глубже погружаться в тему frontend и backend разработки. Если Вашей команде нужен увлеченный 
-          фронтэндер, ищите меня в <strong><a class="link" href="https://t.me/dewandrew">telegram</a></strong>.
+          фронтэндер, ищите меня в <strong><a class="link" href="https://t.me/frontandrew">telegram</a></strong>.
         </p>
       </section>
     </main>
@@ -127,7 +127,7 @@
 
   </div>
 
-  <script src="scripts/index.10794240ffbf384001c5.js"></script>
+  <script src="scripts/index.cddd7e8b6bc1e2209737.js"></script>
 
 </body>
 
