--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
   <meta name="author" content="Andrew Bubnov">
   <title>About</title>
   <link rel="icon" type="image/png" sizes="32x32" href="images/favicon.png">
-  <link rel="stylesheet" href="styles/about.9ecf7cb156228373cea8.css">
+  <link rel="stylesheet" href="styles/about.652bc7176344ad139eb9.css">
 </head>
 
 <body>
@@ -91,7 +91,7 @@
           <br><br>
           Именно такой восторг я испытываю теперь, написав с нуля этот поисковик новостей. Теперь я ищу интересные проекты, где 
           буду полезен и смогу все глубже погружаться в тему frontend и backend разработки. Если Вашей команде нужен увлеченный 
-          фронтэндер, ищите меня в <strong><a class="link" href="https://t.me/dewandrew">telegram</a></strong>.
+          фронтэндер, ищите меня в <strong><a class="link" href="https://t.me/frontandrew">telegram</a></strong>.
         </p>
       </section>
 
@@ -143,7 +143,7 @@
     </footer>
 
   </div>
-  <script src="scripts/about.9ecf7cb156228373cea8.js"></script>
+  <script src="scripts/about.652bc7176344ad139eb9.js"></script>
 </body>
 
 </html>
